# EDAF55-Concurrent-Programming

./: .gitignore  README.md  build_fake_server.sh  build_server.sh  run_c.sh  run_java.sh
CameraApplication/: .gitignore  build_fake_server.sh  build_server.sh  run_java.sh
CameraApplication/JavaClient/src/: main.java
CameraApplication/JavaClient/src/actions/: DisconnectAction.java  SyncAction.java
CameraApplication/JavaClient/src/components/: Choice.java  ControlPane.java  DialogPane.java  DisconnectEvent.java  DisconnectHandler.java  ImageGridView.java  MainPane.java  MultipleChoiceEvent.java  MultipleChoiceHandler.java
CameraApplication/JavaClient/src/css/: main.css
CameraApplication/JavaClient/src/models/: ButtonMonitor.java  CameraMonitor.java
CameraApplication/JavaClient/src/threads/: OutputThread.java
CameraApplication/documentation/: DESIGN.md
CameraApplication/src/main/java/: Monitor.java
CameraApplication/src_c/main/: camera.c  camera.h  fakecapture.h  motion_server.c  server_common.h
JavaClient/src/: main.java
JavaClient/src/Components/: CameraModel.java  Choice.java  ImageGridView.java
JavaClient/src/actions/: Action.java  ConnectAction.java  MotionAction.java  SyncAction.java
JavaClient/src/components/: AddButton.java  Button.java  CameraCell.java  CameraListView.java  CameraView.java  ConnectDialog.java  ConnectEvent.java  ConnectHandler.java  ControlPane.java  DialogPane.java  DisconnectEvent.java  DisconnectHandler.java  ImageGridView.java  MainPane.java  MultipleChoiceView.java
JavaClient/src/constants/: Constants.java
JavaClient/src/css/: main.css
JavaClient/src/models/: ButtonMonitor.java  CameraModel.java  CameraMonitor.java  ImageModel.java
JavaClient/src/threads/: ButtonHandler.java  InputThread.java  MotionListener.java  OutputThread.java  SyncThread.java
alarmclock/src/build_lnx/: Main.java  Makefile  Makefile.am  Makefile.in  Makefile~  aclocal.m4  build.sh  config.h.in  configure  configure.in  done_ClockInput.c  done_ClockInput.h  done_ClockOutput.c  done_ClockOutput.h  done_InputSampler.c  done_InputSampler.h  out
alarmclock/src/build_lnx/autom4te.cache/: output.1  requests  traces.0  traces.1
alarmclock/src/build_lnx/done/: ClockInput.java  ClockOutput.java  InputSampler.java
alarmclock/src/build_lnx/native/ncurses/: clock.c  done_ClockInput.c  done_ClockOutput.c
alarmclock/src/build_lnx/native/pthread/: ClockDevice.c  clockgui.h  done_ClockOutput.c
alarmclock/src/build_lnx/todo/: AlarmClock.java  ButtonHandler.java  SharedData.java  TimeHandler.java
bin_c/: Fake_Server  Server
lift/src/lift/: Lift.java  LiftView.java  Main.java  Monitor.java  Person.java  PersonFactory.java  PersonThread.java
src/main/java/: DisplayThread.java  InputSocket.java  Main.java  Monitor.java
src_c/main/: Makefile  Makefile.fake  Makefile_2  fakecapture.c  http_server.c  monitor.c  motion_server  server.c  server_common.c  simple_tcp_client.c  simple_tcp_server.c  simple_udp_client.c  simple_udp_server.c  test_tcp_server
washing/src/todo/: SpinController.java  TemperatureController.java  WashingController.java  WashingProgram.java  WashingProgram1.java  WashingProgram2.java  WashingProgram3.java  WaterController.java
